@@ -1,3 +1,7 @@
+2006-09-09  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/sexy-icon-entry.c: updated from libsexy SVN repository
+
 2006-09-05  Jesse van den Kieboom  <jesse@icecrew.nl>
 	
 	* plugins/filebrowser/gedit-file-browser-store.c:
